<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/padding"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.permission.PermissionCheckActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/permissionMessage"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/bg_permission_message" />


        <TextView
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/we_will_not_store_any_of_your_data_and_adhering_to_our_privacy_agreement" />

    </LinearLayout>


    <Button
        android:id="@+id/allowBtn"
        style="@style/AppButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="@dimen/padding_small"
        android:text="@string/all_allow" />

    <Button
        android:id="@+id/cancelBtn"
        style="@style/SecondaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:text="@string/cancel" />


</LinearLayout>